--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
-openai==1.55.3
-python-dotenv==1.0.0
-pymupdf4llm==0.0.8
-pymupdf==1.23.21
 python-multipart==0.0.6
+python-dotenv==1.0.0
+pymupdf
+pymupdf4llm
